Wed Oct 28 16:34:07 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-find.rb: 無駄なpushがあった

Fri Oct 23 19:38:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-local-file-input.rb: 余分なデバッグメッセージを削除した.

Fri Oct 23 19:08:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: terminate_controller controllerをちゃんと削除できてい
	  なかった.[BUG#153]

Fri Oct 23 17:15:21 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* here.rb, bhere.rb, port.rb: bhereを経由しないでclient(here)に直
	  接転送するようにした.[REQ#139]

Fri Oct 23 16:48:55 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: Controller#init_policy BIotaPlaceで余分な処理が入っ
	  ていた
	* here.rb: GC対応の位置が間違っていた.

Fri Oct 23 16:16:34 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-0.5.2-travel+ipv4 を(形式的に)マージ

Fri Oct 23 16:06:46 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: ipv4-only対応

Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: Controller#init_policy evalでシンボルを指定していた.
	* BUG#151: ruby1.9.1系のバグだった. ruby1.9.1-243以降を使うことで解決

Wed Oct 14 19:32:45 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-direct-product.rb, b-inputtable.rb, binput.rb, bjob.rb,
	  controller.rb: [BUG#151] debug01

Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-barrier.rb, b-shuffle.rb: require し忘れ(merged by
	  0.5.2-003-travel-01)

Fri Oct  2 18:19:27 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: deep-connect ipv4 only対応による変更

Wed Sep 30 16:33:13 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, bjob.rb b-cat.rb, njob.rb, block-source.rb: 
	  [SR#102] gbreak対応

Mon Sep 28 18:04:16 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb: [SR#141] FilterChain追加

Mon Sep 28 17:33:20 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: tgzタグでスナップショットをとるファイルを修正
	* controller.rb, b-direct-product.rb, n-direct-product.rb:
	  [SR#102] 直積対応
	* controller.rb, bjob.rb, b-join.rb, b-zipper.rb, bhere.rb: 上流の