@@ -208,19 +208,12 @@ Log::debug(self, "BBBBBBBBBBBBBBBBB: #{opts.inspect}")
     end
 
     def create_and_add_node(processor, mapper, opts={})
-Log::debug(self, "AAAAAAAAAAAAAA:S")
       node = create_node(processor) {|node|
-Log::debug(self, "AAAAAAAAAAAAAA:1")
 	if opts[:init_njob]
-Log::debug(self, "AAAAAAAAAAAAAA:2 ininit_njob")
 	  opts[:init_njob].call(node)
-Log::debug(self, "AAAAAAAAAAAAAA:3")
 	end
-Log::debug(self, "AAAAAAAAAAAAAA:4")
 	mapper.bind_input(node)
-Log::debug(self, "AAAAAAAAAAAAAA:5")
       }
-Log::debug(self, "AAAAAAAAAAAAAA:E")
       node
     end
 
