@@ -1745,11 +1745,11 @@ when "39", "sub"
        key ? key : @Pool.pvs.last})
 
     puts "SMAP:" 
-    msort = div.smap(%{|i, o|
+    msort = div.smap2(%{|i, b|
     buf = i.map{|st| [st, st.pop]}.select{|st, v|!v.nil?}.sort_by{|st, v| v}
     while st_min = buf.shift
       st, min = st_min
-      o.push min
+      b.call min
       next unless v = st.pop
       idx = buf.rindex{|st, vv| vv < v}
       idx ? buf.insert(idx+1, [st, v]) : buf.unshift([st, v])
